--- a/static/index.css
+++ b/static/index.css
@@ -9,6 +9,7 @@ html {
 
 a {
     text-decoration: none;
+    color: inherit;
 }
 
 /* Container for the video elements */
@@ -87,9 +88,9 @@ video {
     height: 8%;
     left: 49%;
     position: absolute;
-    top: 59%;
+    top: -100px;
     transform: translate(-50%, -50%);
-    transition: transform 50ms;
+    transition: transform 250ms ease;
     width: 20%;
     z-index: 1;
     pointer-events: none
@@ -101,7 +102,7 @@ video {
     height: 8%;
     left: 49%;
     position: absolute;
-    top: 59%;
+    top: -100px;
     transform: translate(-50%, -50%);
     transition: transform 50ms;
     width: 20%;
@@ -127,6 +128,8 @@ video {
     transform: translate(-50%, -50%);
     z-index: 10;
     border: none;
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
     background-color: transparent;
     font-family: persona3;
     font-size: 78px;
@@ -138,14 +141,17 @@ video {
 }
 
 .MenuButtons:hover {
-    z-index: 2;
+    z-index: 5;
     text-shadow: 0 1px 0 #000000, 0 2px 0 #000000,
         0 3px 0 #000000, 0 2px 0 #000000,
         0 20px 30px rgba(0, 0, 0, 0);
+    font-size: 86px;
+    transition: font-size 0.05s ease;
 }
 
 .MenuText:hover {
     color: #000000;
+    z-index: 5;
 }
 
 #MenuB1Text:hover {
@@ -221,4 +227,24 @@ video {
 
 #MenuB5Text {
     color: #13CDFF;
+}
+
+#MenuB1:hover {
+    z-index: 5;
+}
+
+#MenuB2:hover {
+    z-index: 5;
+}
+
+#MenuB3:hover {
+    z-index: 5;
+}
+
+#MenuB4:hover {
+    z-index: 5;
+}
+
+#MenuB5:hover {
+    z-index: 5;
 }
