--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,8 @@
     <title>homepage</title>
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index.css') }}">
-    <script src="{{ url_for('static', filename='index.js') }}"></script>
+    <script src="{{ url_for('static', filename='index_videoaudio.js') }}"></script>
+    <script src="{{ url_for('static', filename='index_boxes.js') }}"></script>
 
 </head>
 
