--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,8 @@
 
 <body>
 
+    <h1 id="BigNumber">00</h1>
+
     <audio autoplay loop id="bgm">
         <source src="../static/site%20images/CS.ogg" type="audio/ogg">
     </audio>
