--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,18 @@
 
 <body>
 
-    <h1 id="BigNumber">00</h1>
+    <h1 id="Credit">Designed by Aaron Hampson.</h1>
 
-    <audio autoplay loop id="bgm">
+    <audio loop id="bgm">
         <source src="../static/site%20images/CS.ogg" type="audio/ogg">
+    </audio>
+
+    <audio id="hover">
+        <source src="../static/site%20images/plim.mp3" type="audio/mpeg">
+    </audio>
+
+    <audio id="openingsound">
+        <source src="../static/site%20images/mainmenuopen.mp3" type="audio/mpeg">
     </audio>
 
     <div class="overlay-container">
