--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -7,23 +7,7 @@
 </head>
 
 <body>
-    <h1>Candidates</h1>
-    <p>Here are the candidates:</p>
-    <ul>
-        {% for candidate in candidates %}
-        <li>
-            <a href="{{ url_for('candidate', candidate_id=candidate[0]) }}">{{ candidate[1] }}</a>
-            {% if loggedin %}
-            {% if candidate[5] == 1 %}
-            <img src="../static/site images/checked.png" alt="checked" width="20" height="20">
-            {% else %}
-            <img src="../static/site images/unchecked.png" alt="unchecked" width="20" height="20">
-            {% endif %}
-            {% endif %}
-        </li>
-
-        {% endfor %}
-    </ul>
+    <div id="TopBar"></div>
 </body>
 
 </html>
