got rid of admin stuff, going straight to editlist

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
         <a href="{{ url_for('register') }}" class="MenuText" id="MenuB3Text">REGISTER</a>
     </button>
     <button class="MenuButtons" id="MenuB4">
-        <a href="{{ url_for('admin') }}" class="MenuText" id="MenuB4Text">ADMIN</a>
+        <a href="{{ url_for('editlist') }}" class="MenuText" id="MenuB4Text">ADMIN</a>
     </button>
     <button class="MenuButtons" id="MenuB5">
         <a href="{{ url_for('login') }}" class="MenuText" id="MenuB5Text">CREDITS</a>
