--- a/templates/soyourefinallyawake.html
+++ b/templates/soyourefinallyawake.html
@@ -31,7 +31,7 @@
     <script>
         const video = document.getElementById('skyrim');
         video.addEventListener('ended', function() {
-            window.location.href = "{{ url_for('admin') }}";
+            window.location.href = "{{ url_for('editlist') }}";
         });
     </script>
 </body>
