added random songs on homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,7 +15,7 @@
     <h1 id="Credit">Designed by Aaron Hampson.</h1>
 
     <audio loop id="bgm">
-        <source src="{{ url_for('static', filename='site sounds/CS.ogg') }}" type="audio/ogg">
+        <source id="bgmSource" src="{{ url_for('static', filename='site sounds/ChangingSeaons.mp3') }}" type="audio/mpeg">
     </audio>
 
     <audio id="hover">
