--- a/templates/edit_list.html
+++ b/templates/edit_list.html
@@ -5,6 +5,7 @@
     <title>Edit List</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='editlist.css') }}">
     <script src="{{ url_for('static', filename='edit_list.js') }}"></script>
+    <link rel="icon" href="{{ url_for('static', filename='site icons/minecraft.ico') }}">
 </head>
 
 <body>
