--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,12 @@
 <html>
 
 <head>
-    <title>homepage</title>
+    <title>Home</title>
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='index.css') }}">
     <script src="{{ url_for('static', filename='index_videoaudio.js') }}"></script>
     <script src="{{ url_for('static', filename='index_boxes.js') }}"></script>
+    <link rel="icon" href="{{ url_for('static', filename='site icons/p3r.ico') }}">
 
 </head>
 
