--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -4,6 +4,7 @@
 <head>
     <title>Log In</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='skyrim.css') }}">
+    <link rel="icon" href="{{ url_for('static', filename='site icons/skyrim.ico') }}">
 </head>
 
 <body>
