--- a/templates/candidate_page.html
+++ b/templates/candidate_page.html
@@ -5,6 +5,7 @@
     <title>{{candidateName}}</title>
 
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='candidate.css') }}">
+    <link rel="icon" href="{{ url_for('static', filename='site icons/kirby.ico') }}">
 </head>
 
 <body>
