--- a/templates/soyourefinallyawake.html
+++ b/templates/soyourefinallyawake.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>So you're finally awake?</title>
+    <link rel="icon" href="{{ url_for('static', filename='site icons/skyrim.ico') }}">
     <style>
         body {
             margin: 0;
