--- a/static/candidates.css
+++ b/static/candidates.css
@@ -5,11 +5,13 @@
     font-style: normal;
 }
 
-html, body {
+html,
+body {
     height: 100%;
     margin: 0;
     padding: 0;
-    overflow: hidden; /* Add this line */
+    overflow: hidden;
+    /* Add this line */
     /* cursor: none; */
     user-select: none;
 }
@@ -35,7 +37,7 @@ video {
 
 #custom-cursor {
     position: absolute;
-    width: 175px; 
+    width: 175px;
     height: auto;
     z-index: 10000;
     background: center center no-repeat;
@@ -52,7 +54,7 @@ video {
     justify-content: center;
     top: 50%;
     left: 50%;
-    z-index: 20;
+    z-index: 200;
     transform: translate(-75%, -100%);
     user-select: none;
     -webkit-user-drag: none;
@@ -61,7 +63,7 @@ video {
     height: auto;
 }
 
-#melee-overlay-div{
+#melee-overlay-div {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -72,7 +74,7 @@ video {
     left: 0;
     z-index: 1;
     pointer-events: none;
-    
+
 }
 
 #melee-overlay {
@@ -86,31 +88,36 @@ video {
 #characters-overlay-div {
     position: absolute;
     transform: translate(-50%, -50%) skew(0deg, 0deg);
-    top: 40%;
-    left: 50%;
-    width: 55%;
-    height: 80%;
+    top: 36%;
+    left: 49%;
+    width: 50%;
+    height: 45%;
     pointer-events: none;
     z-index: 2;
-    
 
+    background-color: rgba(0, 0, 0, 0.5);
+    /* change when debugging */
 }
 
 #characters-div {
     position: absolute;
     transform: translate(-50%, -50%) skew(0deg, 0deg);
-    top: 42.5%;
-    left: 50%;
-    width: 50%;
-    height: 50%;
+    top: 36%;
+    left: 49%;
+    width: 46%;
+    height: 41%;
     z-index: 3;
     overflow-y: scroll;
     overflow-x: hidden;
     display: grid;
-    justify-items: center; /* Center items horizontally */
-    grid-template-columns: repeat(6, 150px);
+    justify-items: center;
+    /* Center items horizontally */
+    grid-template-columns: repeat(7, 120px);
     padding-top: 12.5px;
     gap: 7.5px;
+
+    background-color: rgba(0, 0, 0, 0);
+    /* change when debugging */
 
     align-content: start;
 
@@ -120,8 +127,8 @@ video {
 
 .character {
     position: relative;
-    width: 150px;
-    height: 155px;
+    width: 120px;
+    height: 125px;
     background-size: 100% auto;
     background-position: 0 0;
     background-image: url('site images/meleecharacterbackground.png');
@@ -132,43 +139,96 @@ video {
     overflow: hidden;
 }
 
-.character:hover ~ #custom-cursor {
+.character:hover~#custom-cursor {
     background-image: url('site images/meleecursorhover.png');
 }
 
-.character:nth-child(6n + 2), .character:nth-child(6n + 3), .character:nth-child(6n + 4), .character:nth-child(6n + 5){
+.character:nth-child(7n + 2),
+.character:nth-child(7n + 3),
+.character:nth-child(7n + 4),
+.character:nth-child(7n + 5),
+.character:nth-child(7n + 6) {
     transform: translateY(-12.5px);
 }
 
 .frame {
-    position: absolute; /* Position on top of the character */
+    position: absolute;
+    /* Position on top of the character */
     width: 100%;
     height: auto;
     image-rendering: pixelated;
     pointer-events: none;
-    z-index: 10; /* Higher z-index to ensure it is on top */
+    z-index: 10;
+    /* Higher z-index to ensure it is on top */
 }
 
 .portrait {
-    position: absolute; /* Position behind the frame */
-    z-index: 9; /* Lower z-index so it is behind the frame */
+    position: absolute;
+    /* Position behind the frame */
+    z-index: 9;
+    /* Lower z-index so it is behind the frame */
     width: 95%;
     height: 95%;
     padding: 2.5%
 }
 
-.character-name{
+.character-name {
     position: absolute;
     z-index: 11;
-    top: 65%;
+    top: 67%;
     left: 6.5%;
     width: 90%;
 
-    font-size: 28px;
+    font-size: 20px;
     font-family: 'MeleeCharacterName';
     color: #D4C9C4;
     text-transform: uppercase;
     text-align: center;
     overflow: hidden;
     letter-spacing: 5px;
+}
+
+#player {
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    top: 78%;
+    left: 26%;
+    z-index: 20;
+    transform: translate(-50%, -50%);
+    user-select: none;
+    -webkit-user-drag: none;
+    width: 300px;
+    image-rendering: pixelated;
+    height: 400px;
+    pointer-events: none;
+    background-image: url('site images/player1frame.png');
+    background-size: 100% auto;
+    background-position: 0 0;
+    image-rendering: pixelated;
+    background-repeat: no-repeat;
+}
+
+#player-portrait-overflow {
+    width: 100%;
+    height: 100%;
+}
+
+#player-portrait {
+    position: absolute;
+    width: 75%;
+    top: 5%;
+    left: 10%;
+    height: auto;
+    image-rendering: pixelated;
+    pointer-events: none;
+    z-index: 19;
+}
+
+#player-overlay {
+    position: absolute;
+    width: 100%;
+    height: auto;
+    z-index: 21;
+    top: 0%;
 }
