ok melee page works fine now

--- a/templates/candidates.html
+++ b/templates/candidates.html
@@ -53,6 +53,7 @@
         {% for candidate in candidates %}
             {% set filename = filenames[loop.index - 1] %}
             <div class="character" id="char_{{candidate[0]}}">
+                <span class="image-id-span" id="char_{{candidate[0]}}_{{loop.index - 1}}"></span>
                 <h1 class="character-name">{{ candidate[1].split(' ')[0] }}</h1>
                 <img src="{{ url_for('static', filename='candidate images/' ~ filename) }}" class="portrait">
                 
