--- a/static/candidates.css
+++ b/static/candidates.css
@@ -21,6 +21,14 @@ body {
     /* Add this line */
     /* cursor: none; */
     user-select: none;
+    perspective: 750px;
+    background-color: black;
+}
+
+#rotate-div{
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 
 #video-container {
@@ -55,7 +63,7 @@ video {
 }
 
 #player-chip {
-    position: relative;
+    position: absolute;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -126,7 +134,7 @@ video {
 
 #characters-overlay-div {
     position: absolute;
-    transform: translate(-50%, -50%) skew(0deg, 0deg);
+    transform: translate(-50%, -50%);
     top: 35%;
     left: 49%;
     width: 47%;
@@ -154,7 +162,7 @@ video {
 
 #characters-div {
     position: absolute;
-    transform: translate(-50%, -50%) skew(0deg, 0deg);
+    transform: translate(-50%, -50%);
     top: 36%;
     left: 49%;
     width: 46%;
@@ -242,7 +250,7 @@ video {
 }
 
 #player {
-    position: relative;
+    position: absolute;
     align-items: center;
     justify-content: center;
     top: 78%;
